src/components/featured-card/featured-card.scss
@import "../../base/base";
@import "../../base/mixins/layouts";

.featured-card {
	align-items: flex-end;
	display: flex;
	margin-bottom: $spacing-s;
	min-height: 56.25vw;
	position: relative;
	@media (min-aspect-ratio: 16/10) {
		min-height: 85vh;
	}

	&.productive-component {
		@include productive-component;
	}
}

.featured-card__content {
	color: $color-white;
	padding: $spacing-component-margin;
	@media (orientation: landscape) {
		max-width: 66%;
	}
}

.featured-card__links {
	align-items: center;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

.featured-card__image-wrapper {
	border-radius: $radius-sharp;
	bottom: 0;
	left: 0;
	overflow: hidden;
	position: absolute;
	right: 0;
	top: 0;
	z-index: -1;

	&:before {
		background-image: linear-gradient(to right, $color-black-opaque-80, transparent);
		bottom: 0;
		content: "";
		left: 0;
		position: absolute;
		right: 0;
		top: 0;
		z-index: 1;
	}
}

.featured-card__description {
	margin-bottom: $spacing-xs;
}

.featured-card__secondary-button {
	margin: $spacing-micro $spacing-xxs;
}

.image-container__image {
	.featured-card & {
		height: 100%;
		object-fit: cover;
		position: absolute;
	}
}

